--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -10,3 +10,38 @@ h1, h2, h3, h4, h5, h6 {
     color: white;
     text-align: center;
 }
+
+table{
+    width: 600px;
+    border-collapse: collapse;
+    margin: 20px auto;
+    background-color: white;
+    color: black;
+}
+
+th,td{
+    border: 1px solid #333;
+    padding: 8px;
+    text-align: left;
+}
+form input,
+form select {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+button{
+    background-color: lightblue;
+    color: white;
+    padding: 12px 20px;
+    border-radius: 4px;
+    margin-top: 2px;
+}
+
+form{
+    max-width: 400px;
+    margin: 50px auto;
+}
