--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <h1>List Sony Products</h1>
-    <a style="text-align: center" th:href="@{/products/create}">Add new product</a>
+    <h3 th:text="${'Hello, ' + session.account.getPhone()}"></h3>
+    <div style="text-align: center;" th:if="${session.account.roleId==3}">
+        <a th:href="@{/products/create}">Add new product</a>
+        <a th:href="@{/products/top-stock}">Top Stock Products</a>
+    </div>
 
     <div th:if="${products.isEmpty()}">
         <p style="color:red">List is empty</p>
